--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/menu_maps"
+        android:title="maps"
+        android:icon="@drawable/ic_baseline_location_on_24"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/menu_logout"
         android:title="@string/logout"
         app:showAsAction="always"/>
+
+
 </menu>
